--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "./node_modules/.bin/webpack"
+    "webpack": "./node_modules/.bin/webpack ./webpack-examples/basic.js --mode=development",
+    "webpack:watch": "npm run webpack -- --watch"
   },
   "keywords": [
     "webpack",
@@ -21,7 +22,8 @@
   "author": "Jorge Martín Oliver (jorge.martin.oliver@vodafone.com",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.40.2"
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9"
   },
   "dependencies": {
     "express": "^4.17.1"
