--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "./node_modules/.bin/webpack ./webpack-examples/basic.js --mode=development",
+    "webpack": "./node_modules/.bin/webpack --config webpack.dev.js",
     "webpack:watch": "npm run webpack -- --watch"
   },
   "keywords": [
