--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "console-dot-frog": "^1.0.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "js-cookie": "^2.2.1"
   }
 }
