--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "author": "Jorge Martín Oliver (jorge.martin.oliver@vodafone.com",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^3.2.0",
+    "style-loader": "^1.0.0",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9"
   },
