--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "./node_modules/.bin/webpack --config webpack.dev.js",
-    "webpack:watch": "npm run webpack -- --watch"
+    "webpack:example": "./node_modules/.bin/webpack --config webpack.dev.js",
+    "webpack:watch:example": "npm run webpack -- --watch",
+    "devserver:example": "./node_modules/.bin/webpack-dev-server --config webpack.dev.js",
+    "webpack": "./node_modules/.bin/webpack --config webpack.config.js",
+    "devserver": "./node_modules/.bin/webpack-dev-server --config webpack.config.js"
   },
   "keywords": [
     "webpack",
@@ -22,19 +25,28 @@
   "author": "Jorge Martín Oliver (jorge.martin.oliver@vodafone.com",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.6.2",
+    "@babel/polyfill": "^7.6.0",
+    "@babel/preset-env": "^7.6.2",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.2.1",
     "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "url-loader": "^2.1.0",
     "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1"
   },
   "dependencies": {
     "console-dot-frog": "^1.0.1",
     "express": "^4.17.1",
     "js-cookie": "^2.2.1",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "page": "^1.11.4"
   }
 }
